
Improved Hilow Datadrive emulation:
-Added Raw emulation, like the real device
-Allow ddh variable size (from 3 up to 256 sectors)
-Allow to format only one side on ddh files
-Allow to clear contents when formatting ("c/borrado" or "s/borrado")

Improved Debug:
- CPU history: allow to change memory pointer to the PC register show in history
- Show when CPU is in wait state

Improved Hexadecimal editor:
- Now the data is refreshed when the window has the focus too
- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default
- Allow right click on device icons

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers
Fixed TZX autoload as Real Tape on Spectrum +3
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll
Fixed memory map and behaviour on Jupiter Ace: now it's perfect and better than any other emulator
Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)
Fixed loading .nex snapshots and MMU not managed correctly
Fixed Search menu feature
Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
Fixed showing footer message F5/Button menu