@@ -47,6 +47,7 @@ Mejorada emulación de Hilow Datadrive:
 Mejorado Debug:
 - CPU history: permitir cambiar el puntero de memoria según el registro PC mostrado en el historial
 - Mostar cuando la CPU está en estado wait
+- Agregada acción de breakpoint save-binary
 
 Mejorado Hexadecimal editor:
 - Ahora los datos se refrescan también cuando la ventana tiene el foco
